--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       .circle {
         width: 50px;
         height: 50px;
-        background-color: #3498db;
+        background-color: blue;
         border-radius: 50%;
         position: absolute;
         animation: move 4s ease-in-out infinite;
